--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^18.0.3",
     "antd": "^4.20.1",
     "babel-eslint": "^10.1.0",
+    "dayjs": "^1.11.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
