--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss": "^8.4.13",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.5.0",
     "prettier-eslint": "^14.0.2",
     "redux-devtools": "^3.7.0",
     "typescript-plugin-css-modules": "^3.4.0"
