--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.11.32",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@vitejs/plugin-react": "^1.3.2",
     "antd": "^4.20.1",
     "babel-eslint": "^10.1.0",
     "concurrently": "^7.2.0",
@@ -35,6 +36,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
+    "vite": "^2.9.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,7 +55,8 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "analyz": "cross-env use_analyzer=true npm run build"
+    "analyz": "cross-env use_analyzer=true npm run build",
+    "vite": "vite"
   },
   "eslintConfig": {
     "extends": [
