fix: 修复歌单快速切换请求重复发送的问题，新增axios取消重复请求逻辑

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dayjs": "^1.11.1",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
-    "handtrackjs": "^0.1.5",
+    "express": "^4.18.1",
+    "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -34,29 +35,32 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "commit": "npx cz",
+    "dev": "vite",
+    "build": "vite build --outDir=build",
     "electron-start": "electron .",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "dockerPublish": "docker build -t cloud_music . && docker tag cloud_music registry.cn-hangzhou.aliyuncs.com/music_cloud_kaka/music_cloud:latest && docker push registry.cn-hangzhou.aliyuncs.com/music_cloud_kaka/music_cloud:latest",
+    "test": "craco test",
+    "commit": "npx cz",
     "prepare": "husky install",
     "deploy": "cross-env use_analyzer=false npm run build && npm run dockerPublish",
-    "dockerPublish": "docker build -t cloud_music . && docker tag cloud_music registry.cn-hangzhou.aliyuncs.com/music_cloud_kaka/music_cloud:latest && docker push registry.cn-hangzhou.aliyuncs.com/music_cloud_kaka/music_cloud:latest",
     "build-icon": "electron-icon-builder --input=./public/icon.png --output=build --flatten",
     "pack": "electron-builder",
-    "electron-dev": "concurrently \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "analyz": "cross-env use_analyzer=true npm run build",
-    "vite": "vite"
+    "build:server": "vite build --outDir=build/server --ssr src/server-entry.jsx",
+    "build:vite": "cross-env NODE_ENV=production node server.js",
+    "ssr:dev": "cross-env NODE_ENV=development node server.js",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -111,6 +115,7 @@
     "prettier-eslint": "^14.0.2",
     "redux-devtools": "^3.7.0",
     "typescript-plugin-css-modules": "^3.4.0",
+    "vite-plugin-compression": "^0.5.1",
     "wait-on": "^6.0.1",
     "webpack-bundle-analyzer": "^4.5.0"
   },
