--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,9 @@ pid        /var/run/nginx.pid;
 events {
     worker_connections  1024;
 }
+
+
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -22,13 +25,27 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80 default_server;
-        server_name _;
+      # #开启gzip功能
+      # gzip on;
+      # #开启gzip静态压缩功能
+      # gzip_static on;
+      # #gzip缓存大小
+      # gzip_buffers 4 16k;
+      # #gzip http版本
+      # gzip_http_version 1.1;
+      # #gzip 压缩级别 1-10
+      # gzip_comp_level 5;
+      # #gzip 压缩类型
+      # gzip_types text/plain application/javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
+      # # 是否在http header中添加Vary: Accept-Encoding，建议开启
+      # gzip_vary on;
+      listen 80 default_server;
+      server_name _;
 
-        location  / {
-          root /usr/share/nginx/html;
-          index  index.html ;
-          try_files $uri $uri/ /index.html;
-        }
+      location  / {
+        root /usr/share/nginx/html;
+        index  index.html ;
+        try_files $uri $uri/ /index.html;
+      }
     }
 }
