--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "commitizen": "^4.2.4",
     "craco-less": "^2.0.0",
