fix: 项目改为使用pnpm作为包管理工具

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloud_music",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "authors": "kakachake",
   "author": "kakachake",
   "description": "一个仿网易云音乐的客户端/网页版",
@@ -42,6 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vite build --outDir=build",
     "electron-start": "electron .",
